# nix-weather

./: .gitignore  Cargo.toml  README.md  default.nix  shell.nix
assets/: blender.narinfo  dejagnu.narinfo  xz.tar.bz2.drv
drvs/: blender.drv  hello.drv
src/: derivation.rs  lib.rs  main.rs  narinfo.rs
