[package]
name = "nix-weather"
version = "0.1.0"
authors = ["Till Höppner"]
edition = "2018"

[dependencies]
log = { version = "0.4.8", features = [ "max_level_trace", "release_max_level_debug" ] }
stderrlog = "0.4.3"

structopt = "0.3.5"
url = "2.1.0"
number_prefix = "0.3.0"

nom = "5.0.1"
futures = "0.3.1"
tokio = "0.2.0-alpha.6"
reqwest = "0.10.0-alpha.2"

serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
